--- a/css/style.css
+++ b/css/style.css
@@ -390,11 +390,11 @@ a{
   border-radius: 5px;
   display: grid;
   grid-template-columns: repeat(auto-fill,minmax(250px,1fr));
-  gap: 20px;
+  grid-gap: 20px;
 }
 @media (max-width: 768px) {
   .pay-overlay .products{
-    gap: 8px;
+    grid-gap: 10px;
   }
 }
 .pay-overlay .products::-webkit-scrollbar{
