--- a/css/style.css
+++ b/css/style.css
@@ -390,6 +390,7 @@ a{
   display: grid;
   grid-template-columns: repeat(auto-fill,minmax(250px,1fr));
   grid-gap: 20px;
+  align-items: center;
 }
 @media (max-width: 768px) {
   .pay-overlay .products{
